fix: review keyword chart